@@ -1,4 +1,5 @@
 1 Jul 2018
+fix: check if folder exists before setting perms set_perms.php
 update: set new/updated files owner:group according to current owner:group set_perms.php
 fix: check for empty vars before using them signup.php
 fix: install folder check
